<resources>
    <string name="app_name">Feed News</string>
    <string name="title_activity_drawer_layout">DrawerLayout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>
    <string name="world">World</string>
    <string name="travel">Travel</string>
    <string name="technology">Technology</string>
    <string name="culture">Culture</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="environment">Environment</string>
    <string name="no_internet">No Internet Connection</string>
</resources>
